[package]
name = "store"
version = "0.1.0"
authors = ["diced <pranaco2@gmail.com>"]
edition = "2018"
default-run = "server"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1.4", features = ["full"] }

bincode = "1.3.2"
bytes = "1.0.1"
serde = { version = "1.0.125", features = ["derive"] }

dashmap = { version = "4.0.2", features = ["serde"] }

simple_logger = "1.11.0"
log = "0.4.14"
toml = "0.5.8"
